# libwordring

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeSettings.json.bak  CMakeUserPresets.json.bak  MEMO.md  README.md  index.html  testEnvironments.json
doc/: Doxyfile  default.css  index.html
doc/api/: Doxyfile
doc/html/: _r_e_a_d_m_e_8md.html  algorithm_8hpp.html  algorithm_8hpp.js  algorithm_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classwordring_1_1util_1_1stream-members.html  classwordring_1_1util_1_1stream.html  classwordring_1_1util_1_1stream.js  classwordring_1_1whatwg_1_1infra_1_1scalar__value-members.html  classwordring_1_1whatwg_1_1infra_1_1scalar__value.html  classwordring_1_1whatwg_1_1infra_1_1scalar__value.js  classwordring_1_1whatwg_1_1scalar__value-members.html  classwordring_1_1whatwg_1_1scalar__value.html  classwordring_1_1whatwg_1_1scalar__value.js  classwordring_1_1whatwg_1_1stream-members.html  classwordring_1_1whatwg_1_1stream.html  classwordring_1_1whatwg_1_1stream.js  compatibility_8hpp.html  compatibility_8hpp.js  compatibility_8hpp_source.html  constraint_8hpp.html  constraint_8hpp.js  constraint_8hpp_source.html  dir_00a5096ac10d0ad4908d41b35d1f83f5.html  dir_00a5096ac10d0ad4908d41b35d1f83f5.js  (+83 more)
docs/: default.css  index.html  wordring_cpp.html  wordring_cpp.html.bak
doxygen/: Doxyfile
generator/: CMakeLists.txt
generator/whatwg/encoding/: CMakeLists.txt  README.md  encoding.cpp  gb18030_test_data.cpp  index_table.cpp
generator/whatwg/html/: CMakeLists.txt  atom.cpp  atom_tbl.cpp
generator/whatwg/html/data/: character_reference_code.txt  elements.txt  events.txt  foreign_attributes.txt  foreign_attributes_conversion.txt  html_attributes.txt  html_elements.txt  mathml_attributes.txt  mathml_elements.txt  named_character_reference.txt  namespaces.txt  quirks_mode.txt  svg_attributes.txt  svg_attributes_conversion.txt  svg_elements.txt
generator/whatwg/url/: CMakeLists.txt  public_suffix_list.cpp
include/: README.md
lib/: CMakeLists.txt
lib/string/: CMakeLists.txt
lib/whatwg/: CMakeLists.txt
lib/whatwg/encoding/: README.md  encoding.cpp  indexes.cpp  indexes.hpp  indexes_code_point.cpp  indexes_pointer.cpp
lib/whatwg/html/: atom_tbl.cpp
lib/whatwg/html/parsing/: atom_tbl.cpp
lib/whatwg/url/: host.cpp  url.cpp
lib/wwwc/: CMakeLists.txt
lib/wwwc/css_syntax/: token.cpp
lib/wwwc/selectors/: grammar.cpp
sample/: CMakeLists.txt
sample/trie/: CMakeLists.txt  README.md  test_module.cpp  trie.cpp  trie_base.cpp  trie_heap.cpp  trie_iterator.cpp
test/: CMakeLists.txt
test/css/: CMakeLists.txt  selector.cpp  test_module.cpp
test/encoding/: CMakeLists.txt  coder.cpp  encoding.cpp  test_module.cpp
test/html/: CMakeLists.txt  New File__  README.md  character_iterator.cpp  simple_html.cpp  simple_html_sample_common.cpp  simple_html_sample_document.cpp  simple_html_sample_edits.cpp  simple_html_sample_embedded.cpp  simple_html_sample_grouping.cpp  simple_html_sample_images.cpp  simple_html_sample_introduction.cpp  simple_html_sample_links.cpp  simple_html_sample_parsing.cpp  simple_html_sample_sections.cpp  simple_html_sample_semantics.cpp  simple_html_sample_syntax.cpp  simple_html_sample_text.cpp  simple_node.cpp  simple_parser.cpp  simple_policy.cpp  simple_traits.cpp
test/http/: CMakeLists.txt  simple_server.cpp  test_module.cpp
test/serialize/: CMakeLists.txt  serialize.cpp  serialize_iterator.cpp  test_module.cpp
test/static_vector/: CMakeLists.txt  static_vector.cpp
test/std/: CMakeLists.txt  algorithm.cpp  pair.cpp  type_traits.cpp  vector.cpp
test/string/: CMakeLists.txt  atom.cpp  matcher.cpp
test/tag_tree/: CMakeLists.txt  cast_iterator.cpp  character_iterator.cpp  css_selector.cpp  serial_iterator.cpp  simple_html.cpp  tag_tree.cpp  tag_tree_iterator.cpp  test_module.cpp  tree_iterator.cpp
test/tree/: CMakeLists.txt  css_selector.cpp  simple_html.cpp  test_module.cpp  tree.cpp  tree.cpp.bak  tree_iterator.cpp  vector_tree.cpp  vector_tree.cpp.bak
test/trie/: CMakeLists.txt  const_trie_base_iterator.cpp  double_array.cpp  list_trie.cpp  list_trie_iterator.cpp  stable_trie.cpp  stable_trie_base.cpp  stable_trie_base_benchmark.cpp  stable_trie_base_iterator.cpp  stable_trie_benchmark.cpp  stable_trie_iterator.cpp  trie.cpp  trie_base.cpp  trie_base.hpp  trie_base_benchmark.cpp  trie_base_iterator.cpp  trie_benchmark.cpp  trie_construct_iterator.cpp  trie_heap.cpp  trie_heap_bak.cpp  trie_iterator.cpp  triplet.cpp
test/util/: stream.cpp
test/whatwg/: CMakeLists.txt
test/whatwg/dom/: CMakeLists.txt  infrastructure.cpp  test_module.cpp
test/whatwg/encoding/: CMakeLists.txt  api.cpp  coder.cpp  encoder.cpp  encoding.cpp  encoding_stream.cpp  stream.cpp  terminology.cpp  test_module.cpp  whatwg_encoding.playlist  whatwg_encoding_stream.playlist
test/whatwg/html/: CMakeLists.txt  basic_parser.cpp  html_atom.cpp  simple_node.cpp  simple_parser.cpp  simple_policy.cpp  test_module.cpp  tokenization.cpp  url.cpp
test/whatwg/html/parsing/: atom_defs.cpp  atom_tbl.cpp  html_atom.cpp  input_stream.cpp  on_in_head_insertion_mode.cpp  on_initial_insertion_mode.cpp  parser.cpp  serializing.cpp  tokenization.cpp  tree_construction_dispatcher.cpp
test/whatwg/infra/: CMakeLists.txt  infra.cpp  scalar_value.cpp  scalar_value.cpp.bak  test_module.cpp  unicode.cpp  whatwg_infra.playlist  whatwg_infra_scala_value.playlist
test/whatwg/url/: CMakeLists.txt  api.cpp  host.cpp  infra.cpp  url.cpp  url_record.cpp  whatwg_url.playlist
test/wwwc/: CMakeLists.txt  Makefile
test/wwwc/css_syntax/: CMakeLists.txt  input_stream.cpp  parsing.cpp  test_module.cpp  token.cpp  tokenization.cpp
test/wwwc/selectors/: CMakeLists.txt  README.md  api.cpp  grammar.cpp  grammar_1.cpp  grammar_2.cpp  selector_list.cpg  selector_list.g  selector_list.txt  selector_list.yy  selector_list3.g  selector_list_1.g  test_module.cpp
test/wwwc/selectors/output/: New File  selector_all_original.yy  selector_list_original.tab.cc  selector_list_original.yy
(+1125 files in other folders)
